--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "client-zip": "^2.5.0",
     "jszip": "^3.10.1",
     "next": "^14.2.21",
     "react": "^18.2.0",
