--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-virtual": "^3.13.12",
     "client-zip": "^2.5.0",
     "jszip": "^3.10.1",
     "next": "^14.2.21",
